[package]
name = "termite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["termite-macro"]

[dependencies]
termite-macro = { path = "termite-macro", version = "0.1" }

ahash = "0.8"
async-channel = "1.7"
atomic-borrow = "0.1"
downcast-rs = "1.2"
event-listener = "2.5"
fixedbitset = "0.4"
hashbrown = "0.12"
hyena = "0.2"
