[package]
name = "shiv"
version = "0.1.0-alpha.3"
edition = "2021"
description = "A simple modern Entity Component System"
repository = "https://github.com/ChangeCaps/shiv"
license = "MIT OR Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["shiv-macro", "shiv-macro-impl", "shiv-transform"]

[dependencies]
shiv-macro = { path = "shiv-macro", version = "0.1.0-alpha.3" }

ahash = "0.8"
async-channel = "1.7"
downcast-rs = "1.2"
event-listener = "2.5"
fixedbitset = "0.4"
hashbrown = "0.12"
hyena = "0.2"
tracing = { version = "0.1", default-features = false, optional = true }

[features]
default = ["tracing", "hierarchy"]
tracing = ["dep:tracing"]
hierarchy = []
