[package]
name = "shiv-app"
version = "0.1.0-alpha3"
edition = "2021"
description = "A simple framework for building apps with shiv"
repository = "https://github.com/ChangeCaps/shiv"
license = "MIT OR Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shiv = { path = "..", version = "0.1.0-alpha3" }
