[package]
name = "shiv-macro"
version = "0.1.0-alpha2"
edition = "2021"
description = "Macros for shiv"
repository = "https://github.com/ChangeCaps/shiv"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"
