[package]
name = "shiv-macro"
version = "0.1.0-alpha.3"
edition = "2021"
description = "Macros for shiv"
repository = "https://github.com/ChangeCaps/shiv"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
shiv-macro-impl = { path = "../shiv-macro-impl", version = "0.1.0-alpha.3" }

proc-macro-crate = "1.2"
syn = "1.0"
