[package]
name = "shiv-window"
version = "0.1.0-alpha3"
edition = "2021"
description = "Windowing for shiv"
repository = "https://github.com/ChangeCaps/shiv"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shiv = { path = "..", version = "0.1.0-alpha3" }
shiv-app = { path = "../shiv-app", version = "0.1.0-alpha3" }
shiv-input = { path = "../shiv-input", version = "0.1.0-alpha3" }

deref-derive = "0.1"
downcast-rs = "1.2"
glam = "0.22"
raw-window-handle = "0.5"

winit = { version = "0.27", optional = true }

[features]
default = ["winit"]
